[package]
name = "pico-tflmicro-sys"
version = "0.1.0"
edition = "2021"
authors = ["Bjorn Beishline"]
description = "Rust bindings of TensorFlow Lite for Microcontrollers for Raspberry Pi Pico"
keywords = ["pico", "tflmicro", "sys", "no_std", "embedded", "microcontroller", "tensorflow"]
categories = ["no-std", "embedded", "api-bindings", "computer-vision"]
license = "MIT"

include = [
	"src/**",
	"LICENSE",
	"**/*.md",
	"**/*.rs",
	"prebuilt/**",
	"submodules/pico-tflmicro",
]

[dependencies]
cty = "0.2.2"

[build-dependencies]
embuild = { version = "0.31.4", features = ["cmake", "espidf"] }
bindgen = "0.63"
anyhow = "1.0.81"
walkdir = "2.5.0"
cc = { version = "1.0.90", features = ["parallel"] }

[features]
build = []
