[package]
name = "pico-tflmicro-sys"
version = "0.1.3"
edition = "2021"
authors = ["Bjorn Beishline"]
description = "Rust bindings of TensorFlow Lite for Microcontrollers for Raspberry Pi Pico"
keywords = ["pico", "tflmicro", "sys", "microcontroller", "tensorflow"]
categories = ["no-std", "embedded", "api-bindings", "computer-vision"]
license = "MIT"
documentation = "https://docs.rs/pico-tflmicro-sys/latest/pico_tflmicro_sys/"
readme = "README.md"
repository = "https://github.com/BjornTheProgrammer/pico-tflmicro-sys"

include = [
	"src/**",
	"LICENSE",
	"**/*.md",
	"**/*.rs",
	"prebuilt/**",
]

[dependencies]
cty = "0.2.2"

[build-dependencies]
embuild = { version = "0.31.4", features = ["cmake", "espidf"] }
bindgen = "0.63"
anyhow = "1.0.81"
walkdir = "2.5.0"
cc = { version = "1.0.90", features = ["parallel"] }
downloader = "0.2.7"

[features]
build = []
